[package]
name = "smithy_router_example"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.47", features = ["nightly"] }
smithy = { version = "0.0.5", path="../smithy/crates/smithy", features = [
  "mouse-events",
  "hash-change-events",
  "smd-logs",
  "browser-logs",
 ], default-features = false }
web-sys = { version = "0.3.5", features = [
  "Location",
  "console",
] }
js-sys = "0.3.5"
